--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE HTML>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emoji Keyboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rita/1.3.94/rita-full.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -43,7 +45,7 @@
             </div>
             <div id="footer">
                 <p>made by <a href="https://www.kyungjooha.com/about">KJ Ha</a>.
-                    <!-- find this on <a href="https://github.com/TTurbo0824/text2emoji">github</a>.</p> -->
+                find this on <a href="https://github.com/TTurbo0824/emoji-keyboard">github</a>.</p>
             </div>
         </section>
     </main>
